common-api update: - added new api for new service - added request cache for new service directory-service update: - added new service - added implementation for new api common-spring: - fix pom.xml

--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -53,7 +53,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
-            <optional>true</optional>
         </dependency>
 
     </dependencies>
@@ -77,12 +76,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
+                    <source>18</source>
+                    <target>18</target>
                 </configuration>
             </plugin>
         </plugins>
