--- a/common-api/pom.xml
+++ b/common-api/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>cinema</artifactId>
-        <groupId>by.kapitonov.cinema</groupId>
-        <version>1.0</version>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.kapitonau.cinema</groupId>
     <artifactId>common-api</artifactId>
+    <version>1.0.1</version>
+    <name>common-api</name>
+    <description>common-api</description>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
@@ -25,5 +25,19 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>18</source>
+                    <target>18</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
